src/test/ui/nll/closure-requirements/escape-upvar-ref.stderr
note: External requirements
  --> $DIR/escape-upvar-ref.rs:33:27
   |
33 |         let mut closure = || p = &y;
   |                           ^^^^^^^^^
   |
   = note: defining type: DefId(0/1:9 ~ escape_upvar_ref[317d]::test[0]::{{closure}}[0]) with closure substs [
               i16,
               extern "rust-call" fn(()),
               &'_#1r mut &'_#2r i32,
               &'_#3r i32
           ]
   = note: number of external vids: 4
   = note: where '_#3r: '_#2r

note: No external requirements
  --> $DIR/escape-upvar-ref.rs:27:1
   |
27 | / fn test() {
28 | |     let x = 44;
29 | |     let mut p = &x;
30 | |
...  |
37 | |     deref(p);
38 | | }
   | |_^
   |
   = note: defining type: DefId(0/0:3 ~ escape_upvar_ref[317d]::test[0]) with substs []

error[E0597]: borrowed value does not live long enough
  --> $DIR/escape-upvar-ref.rs:35:6
   |
32 |         let y = 22;
   |             - temporary value created here
...
35 |     } //~ ERROR borrowed value does not live long enough
   |      ^ temporary value dropped here while still borrowed
   |
   = note: consider using a `let` binding to increase its lifetime

error: aborting due to previous error

